Update landing page

--- a/index.html
+++ b/index.html
@@ -9,7 +9,38 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <!-- Add the rest of the HTML code for the landing page -->
+  <header>
+    <nav>
+      <ul>
+        <li><a href="#" class="active">Home</a></li>
+        <li><a href="#">Search</a></li>
+        <li><a href="#">Account</a></li>
+      </ul>
+      <div class="theme-switch">
+        <label class="switch">
+          <input type="checkbox" id="themeToggle">
+          <span class="slider"></span>
+        </label>
+      </div>
+      <div class="user-profile">
+        <a href="#" class="initial">JD</a> <!-- Replace JD with user's initials -->
+      </div>
+    </nav>
+  </header>
+
+  <main>
+    <section class="hero">
+      <h1>Welcome to Movie Search</h1>
+      <p>Find and bookmark your favorite movies</p>
+    </section>
+
+    <!-- Other sections or components of the landing page -->
+
+  </main>
+
+  <footer>
+    <!-- Add your footer content here -->
+  </footer>
 
   <script src="script.js"></script>
 </body>
