--- a/index.html
+++ b/index.html
@@ -11,19 +11,17 @@
 <body>
   <header>
     <nav>
-      <ul>
-        <li><a href="#" class="active">Home</a></li>
-        <li><a href="#">Search</a></li>
-        <li><a href="#">Account</a></li>
-      </ul>
-      <div class="theme-switch">
+      <div class="logo">
+        <a href="#" class="active">Movie Search</a>
+      </div>
+      <div class="theme-toggle">
         <label class="switch">
           <input type="checkbox" id="themeToggle">
-          <span class="slider"></span>
+          <span class="slider round"></span>
         </label>
       </div>
       <div class="user-profile">
-        <a href="#" class="initial">JD</a> <!-- Replace JD with user's initials -->
+        <a href="#" class="initial">KC</a> <!-- Replace JD with user's initials -->
       </div>
     </nav>
   </header>
