new movie view page

--- a/index.html
+++ b/index.html
@@ -43,3 +43,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
+<!-- and when i click on one of the movies in result take me to that movies page where information of that movie Id is displayed as given in tmdb api. -->
