--- a/register.html
+++ b/register.html
@@ -1,44 +1,22 @@
-<!-- register.html -->
-
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Register</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="login.css">
 </head>
 <body>
-  <header>
-    <!-- Navbar code -->
-  </header>
+  <div class="container">
+    <h2>Login</h2>
+    <form id="registerForm">
+      <input type="email" id="email" placeholder="Email" required>
+      <input type="password" id="password" placeholder="Password" required>
+      <button type="submit">Register</button>
+    </form>
+    <p>Already have an account? <a href="login.html">Login here</a></p>
+  </div>
 
-  <main>
-    <section class="register-form">
-      <h2>Register</h2>
-      <form>
-        <div class="form-group">
-          <label for="username">Username:</label>
-          <input type="text" id="username" name="username" required>
-        </div>
-        <div class="form-group">
-          <label for="password">Password:</label>
-          <input type="password" id="password" name="password" required>
-        </div>
-        <div class="form-group">
-          <label for="confirm-password">Confirm Password:</label>
-          <input type="password" id="confirm-password" name="confirm-password" required>
-        </div>
-        <button type="submit">Register</button>
-      </form>
-      <p>Already have an account? <a href="login.html">Login here</a></p>
-    </section>
-  </main>
-
-  <footer>
-    <!-- Footer content -->
-  </footer>
-
-  <script src="script.js"></script>
+  <script src="login.js"></script>
 </body>
 </html>
